...
];

List<Opportunity> opportunities = [
  Opportunity(
    opportunityName: "Dummy Opp Name $seq1",
    description: "Dummmy descr 1",
    stageId: "Qualification",
    nextStep: "testing1",
    employeeUser: administrators[0], // initial logged admin[0]
    leadUser: leads[0],
    estAmount: Decimal.parse("30000"),
    estProbability: int.parse("30"),
  ),
  Opportunity(
    opportunityName: "Dummy Opp Name $seq2",
    description: "Dummmy descr2",
    stageId: "Prospecting",
    nextStep: "testing2",
    employeeUser: administrators[1],
    leadUser: leads[1],
    estAmount: Decimal.parse("40000"),
    estProbability: int.parse("40"),
  )
...
