...
import 'package:responsive_framework/responsive_wrapper.dart';
import 'package:core/forms/@forms.dart';

import '@forms.dart';

class OpportunitiesForm extends StatefulWidget {
  const OpportunitiesForm();
  @override
  _OpportunitiesState createState() => _OpportunitiesState();
}

class _OpportunitiesState extends State<OpportunitiesForm> {
  ScrollController _scrollController = ScrollController();
...
                      child: Text("no records found!",
                          textAlign: TextAlign.center));
                index -= 1;
                return index >= state.opportunities!.length
                    ? BottomLoader()
                    : Dismissible(
                        key: Key('opportunityItem'),
                        direction: DismissDirection.startToEnd,
                        child: ListTile(
                            leading: CircleAvatar(
                              backgroundColor: Colors.green,
                              child: Text(
                                  "${state.opportunities![index].opportunityName![0]}"),
...
