...
import 'package:core/domains/domains.dart';

import '../../../api_repository.dart';

class OpportunityDialog extends StatefulWidget {
  final Opportunity opportunity;
  const OpportunityDialog(this.opportunity);
  @override
  _OpportunityState createState() => _OpportunityState(opportunity);
}

class _OpportunityState extends State<OpportunityDialog> {
  final Opportunity opportunity;
...
