/*
 * This GrowERP software is in the public domain under CC0 1.0 Universal plus a
 * Grant of Patent License.
 * 
 * To the extent possible under law, the author(s) have dedicated all
 * copyright and related and neighboring rights to this software to the
 * public domain worldwide. This software is distributed without any
 * warranty.
 * 
 * You should have received a copy of the CC0 Public Domain Dedication
 * along with this software (see the LICENSE.md file). If not, see
 * <http://creativecommons.org/publicdomain/zero/1.0/>.
 */

const String HomeRoute = '/home';
const String LoginRoute = '/login';
const String CartRoute = '/cart';
const String RegisterRoute = '/register';
const String ChangePwRoute = '/changePw';
const String AboutRoute = '/about';
const String UserRoute = '/user';
const String UsersRoute = '/users';
const String CompanyRoute = '/company';
const String ProductsRoute = '/products';
const String ProductRoute = '/product';
const String CategoriesRoute = '/categories';
const String CategoryRoute = '/category';
