...
        dbServer: MoquiServer(client: Dio()), chatServer: ChatServer()));
    await tester.pumpAndSettle(Duration(seconds: 10));
    try {
      expect(find.byKey(Key('HomeFormUnAuth')), findsOneWidget);
      await Test.tap(tester, 'loginButton');
      await tester.pump(Duration(seconds: 1));
      await Test.enterText(tester, 'username', 'test@example.com');
      await Test.enterText(tester, 'password', 'qqqqqq9!');
      await Test.tap(tester, 'login');
      await tester.pumpAndSettle(Duration(seconds: 5));
    } catch (_) {
      print("already logged in, fine!");
    }
  });
}
...
