...
                          border: Border.all(
                              color: Colors.black45,
                              style: BorderStyle.solid,
                              width: 0.80),
                        ),
                        child: CheckboxListTile(
                            key: Key('demoData'),
                            title: Text("Generate demo data"),
                            value: _demoData,
                            onChanged: (bool? value) {
                              setState(() {
                                _demoData = value!;
                              });
                            })),
                    SizedBox(height: 10),
                    Row(children: [
                      Expanded(
                          child: ElevatedButton(
                              key: Key('newCompany'),
                              child: Text('Register AND create a new Company'),
                              onPressed: () {
                                if (_formKey.currentState!.validate())
                                  context
                                      .read<AuthBloc>()
                                      .add(AuthRegisterCompanyAndAdmin(
...
